# random-phase-approximation

./: .flake8  .gitattributes  .gitignore  LICENSE  README.md  TODO.md  draft.py  environment.yml  filetest.py  gunicorn.md  make.py  plotter.py  prefix_resub.py  release_all.sh  rpa.code-workspace  signac.md
cmake_fortran/: README.md
dataash5/: README.txt  setup.py
dataframe/: setup.py
figstyle/: setup.py
finite_temperature/excited_states/: CMakeLists.txt  Debug.sh  README.md  Release.sh  binomh.cc  depfile.txt  eigenval.cc  eigenval.h  excstr_orig.cc  funk.cc  gfv.cc  incanon.cc  init.cc  isospin.cc  lorvec.out  matcon0.cc  matcons.cc  multred.cc  nrcfunk.cc  nrutil.h  pair.cc  pair_2.cc  pairout.cc  pruned.make  qpmataph.cc  qpmatbpp.cc  qpmatpair.cc  release.sh  trans.cc  vph.cc  wigner.cc
finite_temperature/excited_states/include/: common.h
finite_temperature/excited_states/src/: README.md  binom.cc  edmonds.h  excstr.cc  incanon.cc  lorneu.cc  mjout.cc  msym.cc  paramet.cc  qplevel.cc  qpmatapp.cc  qpmatbph.cc  qppairout.cc  radialfg.cc  relqrpa.cc  rpa.cc  rpaprobe.cc  testint.cc  trans.cc  transcur.cc  wph.cc
finite_temperature/excited_states/unused/: excstr_orig.cc  field.cc  in.cc  level.cc  qplevel_old.cc
finite_temperature/ground_state/: CMakeLists.txt  Debug.sh  Makefile  README.md  Release.sh  cmcn.f  debug.sh  default.f  dend1.f  densit.f  dis.f  dislib.f  expect.f  field.f  gauleg.f  gauss.f  gauss_12.f  gauss_18.f  iter.f  occup.f  potgh.f  prep.f  radgh.f  reader.f  reinhard_isp.f  release.sh  resu.f  testdo.f  wavec.f
finite_temperature/ground_state/src/: base.f  default.f  dend2.f  dirac.f  dis.f  dislib.f  inout.f  osc.f  paramet  plot.f  prigh.f  reader.f  resu.f  rpaout.f  singf.f  start.f  td_out.f
finite_temperature/ground_state/unused/: new.f
input/: dis.dat_0  dis.dat_f
mypackage/: setup.py
plotting/: setup.py
rsync/: laptop.sh  vulcano.sh  work.sh
signac/: README.md  init.sh  rsync_home.sh  signac.md  signac.rc
test/: log.c  queue_demo.py  tqdm_demo.py
tests/: generate_inputs.py  generate_inputs_no_matrix.py  plot_lorentzian.py  run.sh  run_no_matrix.sh
util/: argparse_example.py  make.py  util.py  (+5 more)
zero_temperature/excited_states/: CMakeLists.txt  Makefile.old  README.md  debug.sh  depfile.txt  funk.h  incanon.cc  lorvec.out  mbin.cc  mjin.cc  mout.cc  msout.cc  msym.cc  nr.h  paramet.cc  potdif.cc  pruned.make  qpmataph.cc  qpmatbph.cc  racahs.cc  release.sh  relqrpa.cc  rpaout.cc  rpaprobe.cc  s9jslj.cc  sla.h  testint.cc
zero_temperature/excited_states/include/: base.h  mesh.h
zero_temperature/excited_states/src/: bin.h  excstr.cc  incanon.cc  init.h  intdif.cc  level.cc  mbout.cc  meffsqx.cc  pair.cc  paramet.cc  prepint.cc  qpbess.cc  qplevel_old.cc  qppairout.cc  racah.cc  relqrpa.cc  rpasort.cc  testint.cc  trans.cc  transcur.cc  vphcomp.cc  vphfgm.cc
zero_temperature/excited_states/unused/: in.cc  level.cc  pair_old.cc  qplevel_old.cc
(+7595 files in other folders)
